tests/ui/errors/snapshots/parse_enum_variant_missing_comma.snap
---
source: tests/ui/errors/mod.rs
---
  [error] Syntax error
   ╭─[test.lis:2:16]
 1 │ 
 2 │ enum E { V(int string) }
   ·                ───┬──
   ·                   ╰── expected `,` or `)`
   ╰────
  help: Add a comma between elements · code: [parse.syntax_error]
